--- a/CatKitNew/CatKitNew/Base.lproj/Main.storyboard
+++ b/CatKitNew/CatKitNew/Base.lproj/Main.storyboard
@@ -1,27 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CatKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CatKitNew" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hungry" translatesAutoresizingMaskIntoConstraints="NO" id="3qN-Zj-Wyb">
-                                <rect key="frame" x="16" y="20" width="568" height="410"/>
+                                <rect key="frame" x="16" y="20" width="343" height="477"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-GW-qv8">
-                                <rect key="frame" x="225" y="430" width="150" height="150"/>
+                                <rect key="frame" x="112.5" y="497" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="tWw-ok-oLQ"/>
                                     <constraint firstAttribute="width" constant="150" id="vK6-cr-bHO"/>
@@ -30,15 +34,12 @@
                                 <state key="normal" backgroundImage="feed_me_button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="192" y="506" width="150" height="150"/>
-                                </variation>
                                 <connections>
-                                    <action selector="feedMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Iwp-bH-UQL"/>
+                                    <action selector="feedMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3wo-qh-4ck"/>
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cat response" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNH-dc-Lyy">
-                                <rect key="frame" x="212.5" y="478.5" width="175" height="36"/>
+                                <rect key="frame" x="102" y="546" width="171" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -55,10 +56,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="3qN-Zj-Wyb" secondAttribute="trailing" id="pm5-Kg-3rA"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3Z0-GW-qv8" secondAttribute="bottom" constant="20" id="rFc-34-3d8"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="sW9-9F-j1g"/>
                     </view>
                     <connections>
                         <outlet property="catImageView" destination="3qN-Zj-Wyb" id="18N-GR-1Ca"/>
-                        <outlet property="feedMeButton" destination="3Z0-GW-qv8" id="Fhn-uu-ukn"/>
+                        <outlet property="feedMeButton" destination="3Z0-GW-qv8" id="q8V-Re-mPX"/>
                         <outlet property="responseText" destination="NNH-dc-Lyy" id="jwc-bV-KMD"/>
                     </connections>
                 </viewController>
